// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/components/ReportDrawer render snap is empty 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-1lblrgt"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  />
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography"
                    >
                      SQL语句
                    </h3>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <div
                      class="custom-monaco-editor-wrapper css-1esok7i"
                    >
                      <input
                        class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor"
                        height="100%"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"readOnly":true}"
                        value=""
                        width="100%"
                      />
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap open is false 1`] = `
<body>
  <div />
</body>
`;

exports[`sqle/components/ReportDrawer render snap when audit rule is exception 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
              <div
                class="ant-drawer-extra"
              >
                <div>
                  extra
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-1lblrgt"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item css-1v03opz"
                        >
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                  fill="#F66074"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              message
                            </span>
                          </div>
                          <div
                            class="annotation-wrapper"
                          >
                            annotation
                            <a
                              class="ant-typography"
                              href="/sqle/rule/knowledge/rule a/mysql"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              查看更多
                            </a>
                          </div>
                        </div>
                      </div>
                    </section>
                    <div
                      class="css-ui9p6g"
                    >
                      <div
                        class="title"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            审核异常
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <span
                              aria-label="info-circle"
                              class="anticon anticon-info-circle tooltips-default-icon"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="info-circle"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                />
                                <path
                                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="audit-exception-wrapper"
                      >
                        <div
                          class="exception-item css-1m6bu0c"
                        >
                          <div
                            class="exception-item-rule-desc-wrapper"
                          >
                            <span
                              class="exception-item-rule-desc-icon"
                            >
                              <svg
                                fill="none"
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                                  fill="#EBAD1C"
                                />
                              </svg>
                            </span>
                            <span
                              class="exception-item-rule-desc-text"
                            >
                              rule b
                            </span>
                          </div>
                          <div
                            aria-label="message"
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line exception-item-message-wrapper basic-typography-ellipsis css-wgj5gs"
                          >
                            message
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                            >
                              lg
                            </span>
                            <span
                              aria-hidden="true"
                              style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                            >
                              <span
                                aria-hidden="true"
                              >
                                ...
                              </span>
                              <div
                                aria-label="复制"
                                class="ant-typography-copy"
                                role="button"
                                style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                                tabindex="0"
                              >
                                <span
                                  aria-label="copy"
                                  class="anticon anticon-copy"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="copy"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography"
                    >
                      SQL语句
                    </h3>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <div
                      class="custom-monaco-editor-wrapper css-1esok7i"
                    >
                      <input
                        class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor"
                        height="100%"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"readOnly":true}"
                        value="select 1"
                        width="100%"
                      />
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap when has data 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-1lblrgt"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item css-1v03opz"
                        >
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                  fill="#F66074"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              message
                            </span>
                          </div>
                          <div
                            class="annotation-wrapper"
                          >
                            annotation
                            <a
                              class="ant-typography"
                              href="/sqle/rule/knowledge/rule a/mysql"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              查看更多
                            </a>
                          </div>
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography"
                    >
                      SQL语句
                    </h3>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <div
                      class="custom-monaco-editor-wrapper css-1esok7i"
                    >
                      <input
                        class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor"
                        height="100%"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"readOnly":true}"
                        value="select 1"
                        width="100%"
                      />
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap when has delete rule 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-1lblrgt"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item has-delete-rule-wrapper css-1v03opz"
                        >
                          <span
                            class="ant-tag ant-tag-volcano message-rule-disabled"
                          >
                            该规则已删除
                          </span>
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                fill="none"
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                                  fill="#EBAD1C"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              message1
                            </span>
                          </div>
                        </div>
                        <div
                          class="result-item css-1v03opz"
                        >
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                  fill="#F66074"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              message2
                            </span>
                          </div>
                          <div
                            class="annotation-wrapper"
                          >
                            annotation
                            <a
                              class="ant-typography"
                              href="/sqle/rule/knowledge/rule b/mysql"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              查看更多
                            </a>
                          </div>
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography"
                    >
                      SQL语句
                    </h3>
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="ant-tag ant-tag-default ellipsis-column-width basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                        >
                          <svg
                            color="#4583FF"
                            height="18"
                            viewBox="0 0 18 19"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在文件
                            </span>
                            <div
                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 sql-source-content basic-typography-ellipsis css-wgj5gs"
                            >
                              file_source
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M512 938.667c-53.333 0-384-257.259-384-469.334s171.925-384 384-384 384 171.926 384 384-330.667 469.334-384 469.334m0-352c64.8 0 117.333-52.534 117.333-117.334S576.8 352 512 352s-117.333 52.533-117.333 117.333S447.2 586.667 512 586.667"
                              fill="#4583FF"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在行
                            </span>
                            3
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <div
                      class="custom-monaco-editor-wrapper css-1esok7i"
                    >
                      <input
                        class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor"
                        height="100%"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"readOnly":true}"
                        value="select 1"
                        width="100%"
                      />
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap when has extra 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
              <div
                class="ant-drawer-extra"
              >
                <div>
                  extra
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-1lblrgt"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item css-1v03opz"
                        >
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                  fill="#F66074"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              message
                            </span>
                          </div>
                          <div
                            class="annotation-wrapper"
                          >
                            annotation
                            <a
                              class="ant-typography"
                              href="/sqle/rule/knowledge/rule a/mysql"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              查看更多
                            </a>
                          </div>
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography"
                    >
                      SQL语句
                    </h3>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <div
                      class="custom-monaco-editor-wrapper css-1esok7i"
                    >
                      <input
                        class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor"
                        height="100%"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"readOnly":true}"
                        value="select 1"
                        width="100%"
                      />
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap when loading is true 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-1lblrgt"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item css-1v03opz"
                        >
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
                                  fill="#41BF9A"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              message
                            </span>
                          </div>
                          <div
                            class="annotation-wrapper"
                          >
                            annotation
                            <a
                              class="ant-typography"
                              href="/sqle/rule/knowledge/rule a/mysql"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              查看更多
                            </a>
                          </div>
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography"
                    >
                      SQL语句
                    </h3>
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="ant-tag ant-tag-default ellipsis-column-width basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                        >
                          <svg
                            color="#4583FF"
                            height="18"
                            viewBox="0 0 18 19"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在文件
                            </span>
                            <div
                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 sql-source-content basic-typography-ellipsis css-wgj5gs"
                            >
                              file_source/file_1/file_2/file_3/file_4/file_5/source.sql
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M512 938.667c-53.333 0-384-257.259-384-469.334s171.925-384 384-384 384 171.926 384 384-330.667 469.334-384 469.334m0-352c64.8 0 117.333-52.534 117.333-117.334S576.8 352 512 352s-117.333 52.533-117.333 117.333S447.2 586.667 512 586.667"
                              fill="#4583FF"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在行
                            </span>
                            3
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <div
                      class="custom-monaco-editor-wrapper css-1esok7i"
                    >
                      <input
                        class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor"
                        height="100%"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"readOnly":true}"
                        value="select 1"
                        width="100%"
                      />
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap when showSourceFile is true 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-1lblrgt"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item css-1v03opz"
                        >
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                fill="none"
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                                  fill="#EBAD1C"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              message
                            </span>
                          </div>
                          <div
                            class="annotation-wrapper"
                          >
                            annotation
                            <a
                              class="ant-typography"
                              href="/sqle/rule/knowledge/rule a/mysql"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              查看更多
                            </a>
                          </div>
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography"
                    >
                      SQL语句
                    </h3>
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="ant-tag ant-tag-default ellipsis-column-width basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                        >
                          <svg
                            color="#4583FF"
                            height="18"
                            viewBox="0 0 18 19"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在文件
                            </span>
                            <div
                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 sql-source-content basic-typography-ellipsis css-wgj5gs"
                            >
                              file_source/file_1/file_2/file_3/file_4/file_5/source.sql
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M512 938.667c-53.333 0-384-257.259-384-469.334s171.925-384 384-384 384 171.926 384 384-330.667 469.334-384 469.334m0-352c64.8 0 117.333-52.534 117.333-117.334S576.8 352 512 352s-117.333 52.533-117.333 117.333S447.2 586.667 512 586.667"
                              fill="#4583FF"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在行
                            </span>
                            3
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <div
                      class="custom-monaco-editor-wrapper css-1esok7i"
                    >
                      <input
                        class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor"
                        height="100%"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"readOnly":true}"
                        value="select 1"
                        width="100%"
                      />
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
